syntax = "proto3";

option java_generic_services = true;
option java_package = "com.logger.rest.auditserver";

service EventService {
    rpc logToFile (Event) returns (LogStatus) {}
}

message Event {
   int64 timestamp = 1;
   int32 userId = 2;
   string event = 3;
}

message LogStatus {
   string status = 1;
}
